--- a/META.yml
+++ b/META.yml
@@ -2,9 +2,11 @@
 abstract: 'Writing documents for MsWord in HTML format'
 author:
   - 'Laurent Dami <laurent.dami AT etat.ge.ch>'
+build_requires: {}
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
+  Module::Build: 0.38
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -13,7 +15,7 @@ name: MsOffice-Word-HTML-Writer
 provides:
   MsOffice::Word::HTML::Writer:
     file: lib/MsOffice/Word/HTML/Writer.pm
-    version: 0.07
+    version: 1.00
 requires:
   Carp: 0
   MIME::Base64: 0
@@ -24,4 +26,4 @@ requires:
   Test::More: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.07
+version: 1.00
